[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://texturas/full-background.png" type="Texture" id=2]
[ext_resource path="res://cenas/QUIT.tscn" type="PackedScene" id=3]
[ext_resource path="res://texturas/player/spr_ratrun_strip4_aqua_1.png" type="Texture" id=4]

[node name="Main Menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 480.0
texture = ExtResource( 2 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="PLAY" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 290.0
margin/right = 362.0
margin/bottom = 310.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "PLAY"
flat = false

[node name="QUIT" parent="." instance=ExtResource( 3 )]

margin/left = 300.0
margin/top = 330.0
margin/right = 362.0
margin/bottom = 350.0

[node name="TextureFrame 2" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 260.0
margin/top = 140.0
margin/right = 384.0
margin/bottom = 254.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="quitPanel" type="PopupPanel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 160.0
margin/right = 450.0
margin/bottom = 300.0
popup/exclusive = false

[node name="Label" type="Label" parent="quitPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 30.0
margin/right = 220.0
margin/bottom = 44.0
text = "DO YOU REALLY WANT TO QUIT?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="yesButton" type="Button" parent="quitPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 70.0
margin/right = 94.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "yes"
flat = false

[node name="noButton" type="Button" parent="quitPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 70.0
margin/right = 164.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "no"
flat = false

[connection signal="pressed" from="PLAY" to="." method="_on_PLAY_pressed"]

[connection signal="pressed" from="QUIT" to="." method="_on_QUIT_pressed"]

[connection signal="pressed" from="quitPanel/yesButton" to="." method="_on_yesButton_pressed"]

[connection signal="pressed" from="quitPanel/noButton" to="." method="_on_noButton_pressed"]


